fix projects and testimonies section on IOS

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4538,3 +4538,7 @@ textarea.form-control {
   position: relative;
   z-index: 9999;
 }
+
+.fullscreen {
+  height: calc(var(--vh, 1vh) * 100);
+}
